Several fixes squashed up.
- fix race condition
- remove redundant 'Document' from types
- document env and config files
- create processor wrapper for common channel management code
- conslidate processor and add Initialize method to read configs
- refactor processor and processor context
- move the processed file to the archive folder in Google Drive
- a lot of general clean up and refactoring

--- a/config/config_template.json
+++ b/config/config_template.json
@@ -1,7 +1,7 @@
 {
   "source_store": "Google Drive",
   "dest_store": "Local",
-  "origin_patterns": ["localhost:3000", "http://localhost:3000"],
-  "attachments_location": "",
-  "notes_location": ""
+  "attachments_location": "<file path to where the original PDF image should be copied>",
+  "notes_location": "<file path where the markdown note should be copied>",
+  "local_storage_path": "<file path to temp local storage>"
 }
