updates to allow for a source folder to map to a destination

--- a/.gitignore
+++ b/.gitignore
@@ -26,12 +26,15 @@ go.work.sum
 
 # config file
 config.json
+config.json.bak
 
 
 download/*
 markdown/*
 bin/*
+work/*
 
 goose-*.sh
+start-ngrok.sh
 
 .DS_Store
